feat(drivers): add net/minixdp for xueCloud, part 2

--- a/drivers/net/meson.build
+++ b/drivers/net/meson.build
@@ -35,6 +35,7 @@ drivers = [
         'kni',
         'liquidio',
         'memif',
+        'minixdp',
         'mlx4',
         'mlx5',
         'mvneta',
