--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,7 +66,7 @@ build-job:
     - pip3 install -i https://pypi.tuna.tsinghua.edu.cn/simple ninja
 
     # 构建
-    - meson build
+    - meson build -Dexamples=l2fwd -Dplatform=generic -Denable_drivers=net/minixdp,mempool/bucket,mempool/ring,mempool/stack -Ddisable_libs=gpudev,power,vhost -Dmax_lcores=8 -Dtests=false
     - cd build
     - ninja
 
