--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,70 +5,13 @@ stages:
   - build
 
 build-job:
-  image: fedora:34
+  image: registry.net.xuegaogg.com/tool/dpdk-builder:v0.3-rk8
   stage: build
+  artifacts:
+    paths:
+      - build/examples
+    expire_in: 1 week
   script:
-    # 替换镜像，省点流量
-    - mv /etc/yum.repos.d/fedora-cisco-openh264.repo /etc/yum.repos.d/fedora-cisco-openh264.repo.bak
-    - |
-      cat > /etc/yum.repos.d/fedora.repo << 'EOF'
-      [fedora]
-      name=Fedora $releasever - $basearch
-      failovermethod=priority
-      baseurl=https://mirrors.tuna.tsinghua.edu.cn/fedora/releases/$releasever/Everything/$basearch/os/
-      metadata_expire=28d
-      gpgcheck=1
-      gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-fedora-$releasever-$basearch
-      skip_if_unavailable=False
-      EOF
-    - |
-      cat > /etc/yum.repos.d/fedora-updates.repo << 'EOF'
-      [updates]
-      name=Fedora $releasever - $basearch - Updates
-      failovermethod=priority
-      baseurl=https://mirrors.tuna.tsinghua.edu.cn/fedora/updates/$releasever/Everything/$basearch/
-      enabled=1
-      gpgcheck=1
-      metadata_expire=6h
-      gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-fedora-$releasever-$basearch
-      skip_if_unavailable=False
-      EOF
-    - |
-      cat > /etc/yum.repos.d/fedora-modular.repo << 'EOF'
-      [fedora-modular]
-      name=Fedora Modular $releasever - $basearch
-      failovermethod=priority
-      baseurl=https://mirrors.tuna.tsinghua.edu.cn/fedora/releases/$releasever/Modular/$basearch/os/
-      enabled=1
-      metadata_expire=7d
-      gpgcheck=1
-      gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-fedora-$releasever-$basearch
-      skip_if_unavailable=False
-      EOF
-    - |
-      cat > /etc/yum.repos.d/fedora-updates-modular.repo << 'EOF'
-      [updates-modular]
-      name=Fedora Modular $releasever - $basearch - Updates
-      failovermethod=priority
-      baseurl=https://mirrors.tuna.tsinghua.edu.cn/fedora/updates/$releasever/Modular/$basearch/
-      enabled=1
-      gpgcheck=1
-      metadata_expire=6h
-      gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-fedora-$releasever-$basearch
-      skip_if_unavailable=False
-      EOF
-    - dnf makecache
-
-    # 安装构建依赖
-    - dnf groupinstall "Development Tools" -y
-    - dnf install unzip vim curl wget -y
-    - dnf install meson python3-pyelftools python3-pip numactl-devel libbpf-devel libpcap-devel openssl-devel -y
-    - pip3 install -i https://pypi.tuna.tsinghua.edu.cn/simple ninja
-
-    # 构建
     - meson build -Dexamples=l2fwd -Dplatform=generic -Denable_drivers=net/minixdp,mempool/bucket,mempool/ring,mempool/stack -Ddisable_libs=gpudev,power,vhost -Dmax_lcores=8 -Dtests=false
     - cd build
     - ninja
-
-
-
